@@ -1,3 +1,9 @@
+as you can see, 
+i changed this page
+
+difference between
+singleplayer and sanbox
+--------------------
 added Kerit and KeritMine
 --------------------------
 added Barracks for aliens
